--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,47 +1,79 @@
 @font-face {
-    font-family: 'Montserrat';
-    font-weight: 400;
-    src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-Regular.ttf) format('truetype');
+  font-family: "Montserrat";
+  font-weight: 400;
+  src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-Regular.ttf)
+    format("truetype");
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    font-weight: 700;
-    src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-Bold.ttf) format('truetype'); 
+  font-family: "Montserrat";
+  font-weight: 700;
+  src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-Bold.ttf)
+    format("truetype");
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    font-weight: 600;
-    src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-SemiBold.ttf) format('truetype'); 
+  font-family: "Montserrat";
+  font-weight: 600;
+  src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-SemiBold.ttf)
+    format("truetype");
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    font-weight: 300;
-    src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-Light.ttf) format('truetype'); 
+  font-family: "Montserrat";
+  font-weight: 300;
+  src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-Light.ttf)
+    format("truetype");
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    font-weight: 200;
-    src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-ExtraLight.ttf) format('truetype'); 
+  font-family: "Montserrat";
+  font-weight: 200;
+  src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-ExtraLight.ttf)
+    format("truetype");
 }
 
 @font-face {
-    font-family: 'Inter';
-    font-weight: 400;
-    src: url(/public/assets/font/inter/Inter-Regular.ttf) format('truetype'); 
+  font-family: "Inter";
+  font-weight: 400;
+  src: url(/public/assets/font/inter/Inter-Regular.ttf) format("truetype");
 }
 
 @font-face {
-    font-family: 'Inter';
-    font-weight: 600;
-    src: url(/public/assets/font/inter/Inter-SemiBold.ttf) format('truetype'); 
+  font-family: "Inter";
+  font-weight: 600;
+  src: url(/public/assets/font/inter/Inter-SemiBold.ttf) format("truetype");
 }
 
 @font-face {
-    font-family: 'Inter';
-    font-weight: 700;
-    src: url(/public/assets/font/inter/Inter-Bold.ttf) format('truetype'); 
+  font-family: "Inter";
+  font-weight: 700;
+  src: url(/public/assets/font/inter/Inter-Bold.ttf) format("truetype");
+}
+
+/* Hero */
+#hero {
+  background-image: url(/public/assets/img/hero.png);
+  background-repeat: no-repeat;
+  height: 60vw;
+}
+
+#hero p {
+  font-family: "Inter";
+  font-size: 0.8em;
+  color: white;
+  width: 45%;
+  text-align: end;
+  background-color: rgba(255, 255, 255, 0.349);
+  padding: 1%;
+}
+
+.btn-hero {
+  font-family: "Montserrat";
+  font-weight: bold;
+  background-color: #904133;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  padding: 1% 0.5%;
 }
