barre de nav fixée

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -45,3 +45,7 @@
     font-weight: 700;
     src: url(/public/assets/font/inter/Inter-Bold.ttf) format('truetype'); 
 }
+
+ul {
+    list-style: none;
+}
