--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -65,7 +65,7 @@
   /* background-color: rgba(255, 255, 255, 0.498); */
 }
 
-.bg-image {
+.bg-hero-image {
   background-image: url(/public/assets/img/hero.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -83,9 +83,6 @@
     #89b4a2,
     #89b9a5
   );
-  /* box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.5); */
-  border: none;
-  border-radius: 4px;
   color: black;
   font-family: "Montserrat";
   font-weight: 300;
@@ -94,8 +91,8 @@
 }
 
 .btn-action {
-  font-family: "Montserrat";
-  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
   font-size: 1rem;
   background-image: linear-gradient(
     to right top,
@@ -106,20 +103,14 @@
     #c05441
   );
   color: white;
-  border: none;
-  border-radius: 3px;
-  padding: 2% 3%;
-  transition: color 150ms ease-in-out;
 }
 
-.btn-action:hover {
+.btn-more {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 0.9rem;
   color: white;
-  background-color: #000000;
-  border: 2px solid black;
-}
-
-#hero button {
-  padding: 1% 3%;
+  background-color: #8aa59a;
 }
 
 /* Headings */
@@ -134,7 +125,7 @@
   margin-bottom: 0%;
 }
 
-/* Cards */
+/* Cards Home*/
 .card {
   width: 18rem;
 }
@@ -147,6 +138,24 @@
 
 .card-img-top {
   height: 55%;
+}
+
+/* Events */
+.bg-event-image {
+  background-image: url(/public/assets/img/events.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 60vh;
+}
+
+#events p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 1.2rem;
+  color: white;
+  width: 40%;
+  background-color: #8aa59ab0;
+  padding: 1.5%;
 }
 
 /* Navbars */
@@ -162,13 +171,13 @@
 
 /* Media queries */
 @media ((min-width: 576px) and (orientation: portrait)) {
-  .bg-image {
+  .bg-hero-image {
     height: 45vh;
   }
 }
 
 @media ((min-width: 576px) and (orientation: landscape)) {
-  .bg-image {
+  .bg-hero-image {
     height: 50vh;
   }
 }
@@ -177,12 +186,21 @@
   :root {
     font-size: 20px;
   }
-  .bg-image {
+  .bg-hero-image {
     height: 55vh;
+  }
+  .btn-action {
+    font-weight: 600;
   }
   #hero p {
     font-size: 1rem;
     width: 30%;
+  }
+}
+
+@media ((min-width: 992px) and (orientation: portrait)) {
+  .bg-event-image {
+    height: 35vh;
   }
 }
 
@@ -191,7 +209,7 @@
     font-size: 25px;
   }
 
-  .bg-image {
+  .bg-hero-image {
     height: 60vh;
   }
 
@@ -202,9 +220,5 @@
   #hero p {
     font-size: 1rem;
     width: 30%;
-  }
-
-  .btn-action {
-    font-size: 1.2rem;
   }
 }
