--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,54 +1,4 @@
 
-@media (max-width: 767px) {
-  .bg-image {
-    height: 45vh;
-  }
-  .footerBg{
-    background-color: #3B0A01;
-    background-repeat: no-repeat;
-    background-position: auto;
-    background-size: 100% 100%;
-    color: #FFFFFF;
-  }
-  .footerBg_desktop{
-    display: none;
-  }
-}
-@media (min-width: 768px) {
-  .bg-image {
-    height: 55vh;
-  }
-  .footerBg_desktop{
-    background-color: #3B0A01;
-    background-repeat: no-repeat;
-    background-position: auto;
-    background-size: 100% 100%;
-    color: #FFFFFF;
-  }
-  .footerBg{
-    display: none;
-  }
-}
-@media (min-width: 992px) {
-  .bg-image {
-    height: 60vh;
-  }
-}
- .icon_socialMedia {
-    width:29px;
- }
- .bg_Social {
-  background-color: #FFFFFF;
-  border-radius: 20px;
-  margin-top: 12px;
-  margin-bottom: 12px;
- }
-@import url('https://unpkg.com/css.gg@2.0.0/icons/css/add-r.css');
-
-.container {
-    width: 100vw;
-    
-}
 .header {
     height: 10vh;
 }
@@ -99,9 +49,9 @@
     border: 2px solid;
     transform: scale(var(--ggs,1));
     border-radius: 4px
- }
- .gg-add-r::after,
- .gg-add-r::before {
+}
+.gg-add-r::after,
+.gg-add-r::before {
     content: "";
     display: block;
     box-sizing: border-box;
@@ -112,13 +62,13 @@
     border-radius: 5px;
     top: 8px;
     left: 4px
- }
- .gg-add-r::after {
+}
+.gg-add-r::after {
     width: 2px;
     height: 10px;
     top: 4px;
     left: 8px
- }
+}
 
 
 
@@ -208,7 +158,7 @@
     #89b9a5
   );
   color: black;
-  font-family: "Montserrat";
+  font-family: "Montserrat" ,sans-serif;
   font-weight: 300;
   font-size: 1.2rem;
   width: 30%;
@@ -320,6 +270,22 @@
     font-size: 1rem;
     width: 30%;
   }
+
+  .bg-image {
+    height: 55vh;
+  }
+  
+  .footerBg_desktop{
+    background-color: #3B0A01;
+    background-repeat: no-repeat;
+    background-position: auto;
+    background-size: 100% 100%;
+    color: #FFFFFF;
+    margin-top: 5%;
+  }
+  .footerBg{
+    display: none;
+  }
 }
 
 @media ((min-width: 992px) and (orientation: portrait)) {
@@ -344,33 +310,36 @@
   #hero p {
     font-size: 1rem;
     width: 30%;
+  }  .bg-image {
+    height: 60vh;
   }
+  .icon_socialMedia {
+    width:55px;
+    margin: 15px;
+}
 }
 
-@media (max-width: 707px) {
-    .tablet {
-        display: none;
-    }
-    .desktop {
-        display: none;
-    }
+
+
+@import url('https://unpkg.com/css.gg@2.0.0/icons/css/add-r.css');
+
+
+@media (max-width: 767px) {
+  .bg-image {
+    height: 45vh;
+  }
+  .footerBg{
+    background-color: #3B0A01;
+    background-repeat: no-repeat;
+    background-position: auto;
+    background-size: 100% 100%;
+    color: #FFFFFF;
+  }
+  .footerBg_desktop{
+    display: none;
+  }
+  .icon_socialMedia {
+    width:35px;
+    margin: 10px;
 }
-@media (min-width: 708px) {
-    .mobile {
-        display: none;
-    }
-    .desktop {
-        display: none;
-    }
-}
-  @media (min-width: 884px) {
-    .mobile {
-        display: none;
-      }
-      .tablet {
-        display: none;
-    }
-    .desktop {
-        display: flex;
-    }
 }
