--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -165,25 +165,25 @@ h1 {
 }
 
 /* Announcements, form, filters */
-.form-sort,
-.form-select {
+.form-sort {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  font-size: 1rem;
-  background-color: #8aa59a;
-}
-
-.form-select option {
   font-size: 0.8rem;
+  background-color: #8aa59a;
 }
 
 .filters p {
   font-family: "Inter";
+  font-weight: 400;
   font-size: 1rem;
 }
 
-#announcements p {
+.filter-categories label,
+.form-departements option,
+#announcements p,
+.form-sort option {
   font-family: "Inter";
+  font-weight: 400;
   font-size: 0.8rem;
 }
 
@@ -231,7 +231,7 @@ h1 {
   }
 
   .announcement-image {
-    width: 20%;
+    width: 15%;
   }
 }
 
@@ -243,7 +243,7 @@ h1 {
 
 @media (min-width: 992px) {
   :root {
-    font-size: 25px;
+    font-size: 23px;
   }
 
   .bg-hero-image {
@@ -261,5 +261,9 @@ h1 {
 
   .announcement-image {
     width: 30%;
+  }
+
+  .btn-filter {
+    font-size: 0.8rem;
   }
 }
