--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -131,6 +131,14 @@
   padding: 2% 3%;
 }
 
+.btn-more {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 0.9rem;
+  color: white;
+  background-color: #8aa59a;
+}
+
 #hero button {
   padding: 1% 3%;
 }
@@ -139,4 +147,10 @@
 
 ul {
   list-style: none;
+}
+
+form {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 1em;
 }
