--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,76 +1,69 @@
-
 .header {
-    height: 10vh;
+  height: 10vh;
 }
 
 .logo {
-    width: 100%;
-    margin-top: 20%;
+  width: 100%;
+  margin-top: 20%;
 }
 
 .logo_desktop {
-    max-width: 7vw;
-    margin-right: 0px;
-
+  max-width: 7vw;
+  margin-right: 0px;
 }
 .p_profil {
-    width: 25%;
-    border-radius: 200px;
-    margin-top: 13%;
-    float: right;
-    margin-right: 5%;
-
+  width: 25%;
+  border-radius: 200px;
+  margin-top: 13%;
+  float: right;
+  margin-right: 5%;
 }
 .button_create_desktop {
-    width: 3vw;
+  width: 3vw;
 }
 .p_profil_desktop {
-    width: 5%;
-    border-radius: 200px;
+  width: 5%;
+  border-radius: 200px;
 }
 
 .searchbar_desktop {
-    width: 20vw;   
+  width: 20vw;
 }
-
 
 .buttonNavbar_desktop {
-    background-color: #904133!important;
+  background-color: #904133 !important;
 }
-
 
 /* Bouton add annonce tablet */
 .gg-add-r {
-    box-sizing: border-box;
-    position: relative;
-    display: block;
-    width: 22px;
-    height: 22px;
-    border: 2px solid;
-    transform: scale(var(--ggs,1));
-    border-radius: 4px
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  width: 22px;
+  height: 22px;
+  border: 2px solid;
+  transform: scale(var(--ggs, 1));
+  border-radius: 4px;
 }
 .gg-add-r::after,
 .gg-add-r::before {
-    content: "";
-    display: block;
-    box-sizing: border-box;
-    position: absolute;
-    width: 10px;
-    height: 2px;
-    background: currentColor;
-    border-radius: 5px;
-    top: 8px;
-    left: 4px
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  width: 10px;
+  height: 2px;
+  background: currentColor;
+  border-radius: 5px;
+  top: 8px;
+  left: 4px;
 }
 .gg-add-r::after {
-    width: 2px;
-    height: 10px;
-    top: 4px;
-    left: 8px
+  width: 2px;
+  height: 10px;
+  top: 4px;
+  left: 8px;
 }
-
-
 
 :root {
   font-size: 16px;
@@ -158,7 +151,7 @@
     #89b9a5
   );
   color: black;
-  font-family: "Montserrat" ,sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 300;
   font-size: 1.2rem;
   width: 30%;
@@ -188,6 +181,12 @@
 }
 
 /* Headings */
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
 .categories h2 {
   font-family: "Inter";
   font-weight: 700;
@@ -243,6 +242,16 @@
   list-style: none;
 }
 
+/* Announcement page */
+#announcement .description {
+  font-family: "Inter";
+  font-size: 0.8rem;
+}
+
+#announcement .fs-small {
+  font-size: 0.7rem;
+}
+
 /* Media queries */
 @media ((min-width: 576px) and (orientation: portrait)) {
   .bg-hero-image {
@@ -274,16 +283,16 @@
   .bg-image {
     height: 55vh;
   }
-  
-  .footerBg_desktop{
-    background-color: #3B0A01;
+
+  .footerBg_desktop {
+    background-color: #3b0a01;
     background-repeat: no-repeat;
     background-position: auto;
     background-size: 100% 100%;
-    color: #FFFFFF;
+    color: #ffffff;
     margin-top: 5%;
   }
-  .footerBg{
+  .footerBg {
     display: none;
   }
 }
@@ -310,36 +319,34 @@
   #hero p {
     font-size: 1rem;
     width: 30%;
-  }  .bg-image {
+  }
+  .bg-image {
     height: 60vh;
   }
   .icon_socialMedia {
-    width:55px;
+    width: 55px;
     margin: 15px;
+  }
 }
-}
 
-
-
-@import url('https://unpkg.com/css.gg@2.0.0/icons/css/add-r.css');
-
+@import url("https://unpkg.com/css.gg@2.0.0/icons/css/add-r.css");
 
 @media (max-width: 767px) {
   .bg-image {
     height: 45vh;
   }
-  .footerBg{
-    background-color: #3B0A01;
+  .footerBg {
+    background-color: #3b0a01;
     background-repeat: no-repeat;
     background-position: auto;
     background-size: 100% 100%;
-    color: #FFFFFF;
+    color: #ffffff;
   }
-  .footerBg_desktop{
+  .footerBg_desktop {
     display: none;
   }
   .icon_socialMedia {
-    width:35px;
+    width: 35px;
     margin: 10px;
-}
+  }
 }
