--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,142 +1,429 @@
+.header {
+  height: 10vh;
+}
+
+.logo {
+  width: 100%;
+  margin-top: 20%;
+}
+
+.logo_desktop {
+  max-width: 7vw;
+  margin-right: 0px;
+
+}
+
+.button_create_desktop {
+  width: 3vw;
+}
+.p_profil_desktop {
+  width: 5%;
+  border-radius: 200px;
+}
+
+.pprofil_desktop {
+    border-radius: 300px;
+    width: 25vh;
+    margin-top: -12vh;
+    }
+
+
+.p_profil {
+  width: 25%;
+  border-radius: 200px;
+  margin-top: 13%;
+  float: right;
+  margin-right: 5%;
+}
+
+.searchbar_desktop {
+  width: 20vw;   
+}
+
+
+.buttonNavbar_desktop {
+  background-color: #904133!important;
+}
+
+
+/* Bouton add annonce tablet */
+.gg-add-r {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  width: 22px;
+  height: 22px;
+  border: 2px solid;
+  transform: scale(var(--ggs,1));
+  border-radius: 4px
+}
+.gg-add-r::after,
+.gg-add-r::before {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  width: 10px;
+  height: 2px;
+  background: currentColor;
+  border-radius: 5px;
+  top: 8px;
+  left: 4px
+}
+.gg-add-r::after {
+  width: 2px;
+  height: 10px;
+  top: 4px;
+  left: 8px
+}
+
+
+
 :root {
-  font-size: 16px;
+font-size: 16px;
+}
+
+/* Fonts */
+@font-face {
+font-family: "Montserrat";
+font-weight: 400;
+src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-Regular.ttf)
+  format("truetype");
 }
 
 @font-face {
-  font-family: "Montserrat";
-  font-weight: 400;
-  src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-Regular.ttf)
-    format("truetype");
+font-family: "Montserrat";
+font-weight: 700;
+src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-Bold.ttf)
+  format("truetype");
 }
 
 @font-face {
-  font-family: "Montserrat";
-  font-weight: 700;
-  src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-Bold.ttf)
-    format("truetype");
+font-family: "Montserrat";
+font-weight: 600;
+src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-SemiBold.ttf)
+  format("truetype");
 }
 
 @font-face {
-  font-family: "Montserrat";
-  font-weight: 600;
-  src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-SemiBold.ttf)
-    format("truetype");
+font-family: "Montserrat";
+font-weight: 300;
+src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-Light.ttf)
+  format("truetype");
 }
 
 @font-face {
-  font-family: "Montserrat";
-  font-weight: 300;
-  src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-Light.ttf)
-    format("truetype");
+font-family: "Montserrat";
+font-weight: 200;
+src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-ExtraLight.ttf)
+  format("truetype");
 }
 
 @font-face {
-  font-family: "Montserrat";
-  font-weight: 200;
-  src: url(/CollabGarden/public/assets/font/montserrat/Montserrat-ExtraLight.ttf)
-    format("truetype");
+font-family: "Inter";
+font-weight: 400;
+src: url(/public/assets/font/inter/Inter-Regular.ttf) format("truetype");
 }
 
 @font-face {
-  font-family: "Inter";
-  font-weight: 400;
-  src: url(/public/assets/font/inter/Inter-Regular.ttf) format("truetype");
+font-family: "Inter";
+font-weight: 600;
+src: url(/public/assets/font/inter/Inter-SemiBold.ttf) format("truetype");
 }
 
 @font-face {
-  font-family: "Inter";
-  font-weight: 600;
-  src: url(/public/assets/font/inter/Inter-SemiBold.ttf) format("truetype");
-}
-
-@font-face {
-  font-family: "Inter";
-  font-weight: 700;
-  src: url(/public/assets/font/inter/Inter-Bold.ttf) format("truetype");
+font-family: "Inter";
+font-weight: 700;
+src: url(/public/assets/font/inter/Inter-Bold.ttf) format("truetype");
 }
 
 /* Hero */
-
 #hero p {
-  font-family: "Inter";
-  font-weight: 400;
-  font-size: 0.8em;
-  color: white;
-  width: 45%;
-  text-align: end;
-  /* background-color: rgba(255, 255, 255, 0.498); */
-  padding: 0.8%;
+font-family: "Inter";
+font-weight: 400;
+font-size: 1rem;
+width: 45%;
+/* background-color: rgba(255, 255, 255, 0.498); */
 }
 
-.bg-image {
-  background-image: url(/public/assets/img/hero.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  height: 30vh;
-}
-
-@media (min-width: 576px) {
-  .bg-image {
-    height: 45vh;
-  }
-}
-
-@media (min-width: 768px) {
-  .bg-image {
-    height: 55vh;
-  }
-}
-
-@media (min-width: 992px) {
-  .bg-image {
-    height: 60vh;
-  }
+.bg-hero-image {
+background-image: url(/public/assets/img/hero.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center center;
+height: 30vh;
 }
 
 /* Buttons */
 .btn-mobile-home {
-  background-image: linear-gradient(
-    to right top,
-    #8aa59a,
-    #8aaa9d,
-    #8aafa0,
-    #89b4a2,
-    #89b9a5
-  );
-  /* box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.5); */
-  border: none;
-  border-radius: 3px;
-  color: black;
-  font-family: "Montserrat";
-  font-weight: 300;
-  font-size: 1.2rem;
+background-image: linear-gradient(
+  to right top,
+  #8aa59a,
+  #8aaa9d,
+  #8aafa0,
+  #89b4a2,
+  #89b9a5
+);
+color: black;
+font-family: "Montserrat" ,sans-serif;
+font-weight: 300;
+font-size: 1.2rem;
+width: 30%;
 }
 
 .btn-action {
-  font-family: "Montserrat";
-  font-weight: 600;
-  font-size: 1rem;
-  background-image: linear-gradient(
-    to right top,
-    #904133,
-    #9c4636,
-    #a84a3a,
-    #b44f3d,
-    #c05441
-  );
-  color: white;
-  border: none;
-  border-radius: 3px;
-  padding: 2% 3%;
+font-family: "Montserrat", sans-serif;
+font-weight: 400;
+font-size: 1rem;
+background-image: linear-gradient(
+  to right top,
+  #904133,
+  #9c4636,
+  #a84a3a,
+  #b44f3d,
+  #c05441
+);
+color: white;
 }
 
-#hero button {
-  padding: 1% 3%;
+.btn-more {
+font-family: "Montserrat", sans-serif;
+font-weight: 600;
+font-size: 0.9rem;
+color: white;
+background-color: #8aa59a;
 }
 
 /* Headings */
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
 
-ul {
-  list-style: none;
+h5 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.categories h2 {
+font-family: "Inter";
+font-weight: 700;
+font-size: 1.3rem;
+margin-bottom: 0%;
+}
+
+.categories h5 {
+margin-bottom: 0%;
+}
+
+/* Cards Home*/
+.card {
+width: 18rem;
+}
+
+.card-title {
+font-family: "Inter";
+font-weight: 700;
+font-size: 1rem;
+}
+
+.card-img-top {
+height: 55%;
+}
+
+/* Events */
+.bg-event-image {
+background-image: url(/public/assets/img/events.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+height: 60vh;
+}
+
+#events p {
+font-family: "Montserrat", sans-serif;
+font-weight: 600;
+font-size: 1.2rem;
+color: white;
+width: 40%;
+background-color: #8aa59ab0;
+padding: 1.5%;
+}
+
+
+/* Announcement page */
+#announcement .description {
+  font-family: "Inter";
+  font-size: 0.8rem;
+}
+
+#announcement .fs-small {
+  font-size: 0.7rem;
+}
+
+.filter-sort {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 0.8rem;
+  background-color: #8aa59a;
+}
+
+.filters p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 0.8rem;
+}
+
+.filter-categories label,
+.filter-departements,
+#announcements p,
+.announcement-rate {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 0.7rem;
+}
+
+.announcement-image {
+  width: 25%;
+}
+
+/* Navbars */
+.navbar-mobile p {
+font-family: "Montserrat", sans-serif;
+font-size: 0.9em;
+margin-bottom: 2%;
+}
+
+.navbar-mobile ul {
+list-style: none;
+}
+
+/* Media queries */
+@media ((min-width: 576px) and (orientation: portrait)) {
+.bg-hero-image {
+  height: 45vh;
+}
+}
+
+@media ((min-width: 576px) and (orientation: landscape)) {
+.bg-hero-image {
+  height: 50vh;
+}
+}
+
+@media (min-width: 768px) {
+:root {
+  font-size: 20px;
+}
+.bg-hero-image {
+  height: 55vh;
+}
+.btn-action {
+  font-weight: 600;
+}
+#hero p {
+  font-size: 1rem;
+  width: 30%;
+}
+
+.bg-image {
+  height: 55vh;
+}
+
+.footerBg_desktop{
+  background-color: #3B0A01;
+  background-repeat: no-repeat;
+  background-position: auto;
+  background-size: 100% 100%;
+  color: #FFFFFF;
+  margin-top: 5%;
+}
+.footerBg{
+  display: none;
+}
+}
+
+@media ((min-width: 992px) and (orientation: portrait)) {
+.bg-event-image {
+  height: 35vh;
+}
+}
+
+@media (min-width: 992px) {
+:root {
+  font-size: 23px;
+}
+
+.bg-hero-image {
+  height: 60vh;
+}
+
+.categories {
+  margin-top: 5%;
+}
+
+#hero p {
+  font-size: 1rem;
+  width: 30%;
+}
+.bg-image {
+  height: 60vh;
+}
+.icon_socialMedia {
+  width:55px;
+  margin: 15px;
+}
+.announcement-image {
+  width: 25%;
+}
+
+.btn-filter {
+  font-size: 0.8rem;
+}
+}
+
+@import url('https://unpkg.com/css.gg@2.0.0/icons/css/add-r.css');
+
+@media (max-width: 767px) {
+.bg-image {
+  height: 45vh;
+}
+.footerBg{
+  background-color: #3B0A01;
+  background-repeat: no-repeat;
+  background-position: auto;
+  background-size: 100% 100%;
+  color: #FFFFFF;
+}
+.footerBg_desktop{
+  display: none;
+}
+.icon_socialMedia {
+  width:35px;
+  margin: 10px;
+}
+}
+
+.nav-link {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.2em;
+  margin-bottom: 2%;
+}
+
+.plus {
+  width: 25px;
+  transform: rotate(90deg);
+}
+.rating {
+  width: 22px;
+  height: 22px;
+  margin-right: 2px;
+}
+.info {
+  font-style: italic;
+}
+
+.button_create_desktop {
+  width: 3vw;
 }
