--- a/lib/bootstrap-5.3.3-dist/css/bootstrap.css
+++ b/lib/bootstrap-5.3.3-dist/css/bootstrap.css
@@ -3013,7 +3013,7 @@ textarea.form-control-lg {
   }
 }
 .btn:hover {
-  color: var(--bs-btn-hover-color);
+  /* color: var(--bs-btn-hover-color); */
   background-color: var(--bs-btn-hover-bg);
   border-color: var(--bs-btn-hover-border-color);
 }
